// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches expected output: @supports.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "test": {
    "@supports (display: grid)": {
      "display": "grid"
    },
    "@supports not (display: grid)": {
      "float": "right"
    }
  },
  "testComplex": {
    "@supports (display: table-cell) and ((display: list-item) and (display:run-in))": {
      "color": "red"
    },
    "@supports (transform-style: preserve) or (-moz-transform-style: preserve) or (-o-transform-style: preserve) or (-webkit-transform-style: preserve)": {
      "color": "red"
    }
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
@supports (display: grid) {
  ._3GKV06._3GKV06 {
    display: -ms-grid;
    display: grid;
  }
}
@supports not (display: grid) {
  ._1cjV2G._1cjV2G {
    float: right;
  }
}
@supports (display: table-cell) and ((display: list-item) and (display: run-in)) {
  ._3u8TFK._3u8TFK {
    color: #f00;
  }
}
@supports (transform-style: preserve) or (-moz-transform-style: preserve) or
  (-o-transform-style: preserve) or (-webkit-transform-style: preserve) {
  ._2gYAIc._2gYAIc {
    color: #f00;
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('test')}
  ↓ ↓ ↓
class="_3GKV06 _1cjV2G"

className={styles('testComplex')}
  ↓ ↓ ↓
class="_3u8TFK _2gYAIc"

`;

exports[`matches expected output: @supports-nested.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "test": {
    "@supports (display: grid)": {
      "color": "red",
      "@supports not (display: grid)": {
        "color": "blue",
        "@supports (display: table-cell) and ((display: list-item) and (display:run-in))": {
          "color": "orange"
        }
      }
    }
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
@supports (display: grid) {
  ._4gBjL3._4gBjL3 {
    color: #f00;
  }
  @supports not (display: grid) {
    ._2HFxQl._2HFxQl {
      color: #00f;
    }
    @supports (display: table-cell) and
      ((display: list-item) and (display: run-in)) {
      ._1gIn7I._1gIn7I {
        color: #ffa500;
      }
    }
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('test')}
  ↓ ↓ ↓
class="_4gBjL3 _2HFxQl _1gIn7I"

`;

exports[`matches expected output: @unknown.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "test": {
    "@unknown": {
      "color": "red"
    }
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
⚠️ THROWN EXCEPTION:

Invariant Violation: Unsupported rule "@unknown"
`;

exports[`matches expected output: autoprefix.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "title": {
    "backgroundClip": "text"
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
._2D4soO {
  -webkit-background-clip: text;
  background-clip: text;
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('title')}
  ↓ ↓ ↓
class="_2D4soO"

`;

exports[`matches expected output: keyframes-from-to.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "aaa": {
    "animationName": "_2rMlJa"
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
.P4y5l {
  -webkit-animation-name: _2rMlJa;
  animation-name: _2rMlJa;
}
@-webkit-keyframes _2rMlJa {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@keyframes _2rMlJa {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('aaa')}
  ↓ ↓ ↓
class="P4y5l"

`;

exports[`matches expected output: keyframes-percentage.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "aaa": {
    "animationName": "a2yPF"
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
._3SIQcJ {
  -webkit-animation-name: a2yPF;
  animation-name: a2yPF;
}
@-webkit-keyframes a2yPF {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
  25% {
    opacity: 0.7;
  }
}
@keyframes a2yPF {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
  25% {
    opacity: 0.7;
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('aaa')}
  ↓ ↓ ↓
class="_3SIQcJ"

`;

exports[`matches expected output: media-queries.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "test": {
    "color": "red",
    "@media print": {
      "color": "red"
    },
    "@media (min-width: 30em) and (max-width: 50em)": {
      "color": "blue"
    }
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
._324Crd {
  color: #f00;
}
@media print {
  .O347H.O347H {
    color: #f00;
  }
}
@media (min-width: 30em) and (max-width: 50em) {
  ._3yLn7C._3yLn7C {
    color: #00f;
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('test')}
  ↓ ↓ ↓
class="_324Crd O347H _3yLn7C"

`;

exports[`matches expected output: media-queries-multiple.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "aaa": {
    "color": "red",
    "fontSize": 32,
    "@media print": {
      "color": "red",
      "fontSize": 16
    },
    "@media (min-width: 30em) and (max-width: 50em)": {
      "color": "blue"
    }
  },
  "bbb": {
    "@media print": {
      "color": "green"
    }
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
._324Crd {
  color: #f00;
}
._1DKsqE {
  font-size: 32px;
}
@media print {
  .O347H.O347H {
    color: #f00;
  }
  .gdWvu.gdWvu {
    font-size: 16px;
  }
  ._1Yuw4C._1Yuw4C {
    color: #008000;
  }
}
@media (min-width: 30em) and (max-width: 50em) {
  ._3yLn7C._3yLn7C {
    color: #00f;
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('aaa')}
  ↓ ↓ ↓
class="_324Crd _1DKsqE O347H gdWvu _3yLn7C"

className={styles('bbb')}
  ↓ ↓ ↓
class="_1Yuw4C"

`;

exports[`matches expected output: media-queries-nested.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "test": {
    "@media print": {
      "color": "red",
      "@media (max-width: 12cm)": {
        "color": "blue"
      }
    }
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
@media print {
  .O347H.O347H {
    color: #f00;
  }
  @media (max-width: 12cm) {
    ._3XWcpy._3XWcpy {
      color: #00f;
    }
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('test')}
  ↓ ↓ ↓
class="O347H _3XWcpy"

`;

exports[`matches expected output: media-queries-nested-deep.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "test": {
    "@media (max-width: 10cm)": {
      "color": "#F00000",
      "backgroundColor": "#FFFFFF",
      "@media (max-width: 9cm)": {
        "color": "#0F0000",
        "backgroundColor": "#FFFFFF",
        "@media (max-width: 8cm)": {
          "color": "#00F000",
          "backgroundColor": "#FFFFFF",
          "@media (max-width: 7cm)": {
            "color": "#000F00",
            "backgroundColor": "#FFFFFF",
            "@media (max-width: 6cm)": {
              "color": "#0000F0",
              "backgroundColor": "#FFFFFF",
              "@media (max-width: 5cm)": {
                "color": "#00000F",
                "backgroundColor": "#FFFFFF"
              }
            }
          }
        }
      }
    }
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
@media (max-width: 10cm) {
  ._2Y4Iwc._2Y4Iwc {
    color: #f00000;
  }
  ._4yjauT._4yjauT {
    background-color: #fff;
  }
  @media (max-width: 9cm) {
    ._33Zsp._33Zsp {
      color: #0f0000;
    }
    ._356q9B._356q9B {
      background-color: #fff;
    }
    @media (max-width: 8cm) {
      ._3e6rQn._3e6rQn {
        color: #00f000;
      }
      ._2G8HFc._2G8HFc {
        background-color: #fff;
      }
      @media (max-width: 7cm) {
        ._5cFAt._5cFAt {
          color: #000f00;
        }
        ._1uNKjr._1uNKjr {
          background-color: #fff;
        }
        @media (max-width: 6cm) {
          ._3Y2upP._3Y2upP {
            color: #0000f0;
          }
          ._1j0v0B._1j0v0B {
            background-color: #fff;
          }
          @media (max-width: 5cm) {
            ._1yZ6Vs._1yZ6Vs {
              color: #00000f;
            }
            ._1gfVcg._1gfVcg {
              background-color: #fff;
            }
          }
        }
      }
    }
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('test')}
  ↓ ↓ ↓
class="_2Y4Iwc _4yjauT _33Zsp _356q9B _3e6rQn _2G8HFc _5cFAt _1uNKjr _3Y2upP _1j0v0B _1yZ6Vs _1gfVcg"

`;

exports[`matches expected output: media-queries-nested-pseudo.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "media": {
    "color": "red",
    "@media print": {
      "color": "red",
      ":hover": {
        "color": "pink"
      }
    }
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
._324Crd {
  color: #f00;
}
@media print {
  .O347H.O347H {
    color: #f00;
  }
  ._2sykgO._2sykgO:hover {
    color: #ffc0cb;
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('media')}
  ↓ ↓ ↓
class="_324Crd O347H _2sykgO"

`;

exports[`matches expected output: media-queries-same-style.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "style1": {
    "@media (min-width: 1280px)": {
      "color": "red"
    },
    "color": "blue"
  },
  "style2": {
    "color": "red"
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
@media (min-width: 1280px) {
  ._4k1sZK._4k1sZK {
    color: #f00;
  }
}
._2dHaKY {
  color: #00f;
}
._324Crd {
  color: #f00;
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('style1')}
  ↓ ↓ ↓
class="_4k1sZK _2dHaKY"

className={styles('style2')}
  ↓ ↓ ↓
class="_324Crd"

`;

exports[`matches expected output: pseudo-classes.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "link": {
    "textDecoration": "none",
    ":hover": {
      "textDecoration": "underline"
    }
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
.v2kHO {
  -webkit-text-decoration: none;
  text-decoration: none;
}
.crve5:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('link')}
  ↓ ↓ ↓
class="v2kHO crve5"

`;

exports[`matches expected output: pseudo-classes-multiple.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "aaa": {
    "textDecoration": "none",
    ":hover": {
      "textDecoration": "none",
      "color": "red"
    },
    ":active": {
      "color": "red"
    }
  },
  "bbb": {
    ":hover": {
      "color": "blue"
    }
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
.v2kHO {
  -webkit-text-decoration: none;
  text-decoration: none;
}
._30RBbb:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}
._1O0igU:hover {
  color: #f00;
}
._3nDIb1:hover {
  color: #00f;
}
._2kD1Fb:active {
  color: #f00;
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('aaa')}
  ↓ ↓ ↓
class="v2kHO _30RBbb _1O0igU _2kD1Fb"

className={styles('bbb')}
  ↓ ↓ ↓
class="_3nDIb1"

`;

exports[`matches expected output: pseudo-classes-nested-1.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "test": {
    ":hover": {
      "color": "red",
      ":hover": {
        "color": "green",
        ":hover": {
          "color": "blue"
        }
      }
    }
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
⚠️ THROWN EXCEPTION:

Invariant Violation: Nested pseudo classes are not allowed.
`;

exports[`matches expected output: pseudo-classes-nested-2.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "test": {
    ":hover::after": {
      "content": "\\"this is OK\\""
    }
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
._4yRZ3O:hover::after {
  content: "this is OK";
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('test')}
  ↓ ↓ ↓
class="_4yRZ3O"

`;

exports[`matches expected output: pseudo-elements.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "link": {
    "textDecoration": "none",
    ":hover": {
      "textDecoration": "underline"
    },
    "::after": {
      "content": "\\"∞\\""
    },
    "::before": {
      "content": "\\"∞\\""
    }
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
.v2kHO {
  -webkit-text-decoration: none;
  text-decoration: none;
}
.crve5:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}
._2sj7wN::after {
  content: "∞";
}
._4vATsH::before {
  content: "∞";
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('link')}
  ↓ ↓ ↓
class="v2kHO crve5 _2sj7wN _4vATsH"

`;

exports[`matches expected output: pseudo-elements-2.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "ul": {
    "counterReset": "my-reset"
  },
  "li": {
    "counterIncrement": "my-reset",
    "::before": {
      "content": "counter(my-reset)"
    }
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
._33076O {
  counter-reset: my-reset;
}
._3DgpOy {
  counter-increment: my-reset;
}
._3ybBud::before {
  content: counter(my-reset);
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('ul')}
  ↓ ↓ ↓
class="_33076O"

className={styles('li')}
  ↓ ↓ ↓
class="_3DgpOy _3ybBud"

`;

exports[`matches expected output: readme-example.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "example": {
    "fontSize": 32,
    "textDecoration": "none",
    "backgroundColor": "var(--main-bg-color)"
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
._1DKsqE {
  font-size: 32px;
}
.v2kHO {
  -webkit-text-decoration: none;
  text-decoration: none;
}
.stDQH {
  background-color: var(--main-bg-color);
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('example')}
  ↓ ↓ ↓
class="_1DKsqE v2kHO stDQH"

`;

exports[`matches expected output: simple.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "redStyle": {
    "color": "red"
  },
  "blueStyle": {
    "color": "blue"
  },
  "greenStyle": {
    "color": "green"
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
._324Crd {
  color: #f00;
}
._2dHaKY {
  color: #00f;
}
.mRoJ3 {
  color: #008000;
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('redStyle')}
  ↓ ↓ ↓
class="_324Crd"

className={styles('blueStyle')}
  ↓ ↓ ↓
class="_2dHaKY"

className={styles('greenStyle')}
  ↓ ↓ ↓
class="mRoJ3"

`;

exports[`matches expected output: simple-transforms.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "red_one": {
    "color": "red"
  },
  "red_two": {
    "color": "#f00"
  },
  "red_three": {
    "color": "#FF0000"
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
._324Crd {
  color: #f00;
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('red_one')}
  ↓ ↓ ↓
class="_324Crd"

className={styles('red_two')}
  ↓ ↓ ↓
class="_324Crd"

className={styles('red_three')}
  ↓ ↓ ↓
class="_324Crd"

`;

exports[`matches expected output: simple-with-duplicates.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "aaa": {
    "color": "red"
  },
  "bbb": {
    "color": "red"
  },
  "ccc": {
    "color": "red"
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
._324Crd {
  color: #f00;
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('aaa')}
  ↓ ↓ ↓
class="_324Crd"

className={styles('bbb')}
  ↓ ↓ ↓
class="_324Crd"

className={styles('ccc')}
  ↓ ↓ ↓
class="_324Crd"

`;

exports[`matches expected output: variables.js 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  ":root": {
    "--main-bg-color": "pink",
    "--someCOMPLEXvalue": "3px 6px rgb(20, 32, 54)"
  },
  "body": {
    "backgroundColor": "var(--main-bg-color)"
  },
  "bodyWithFallback": {
    "backgroundColor": "var(--someCOMPLEXvalue, blue)"
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
._4qI4JK {
  --main-bg-color: #ffc0cb;
}
._3zBmgU {
  --someCOMPLEXvalue: 3px 6px rgb(20, 32, 54);
}
.stDQH {
  background-color: var(--main-bg-color);
}
.S1vUl {
  background-color: var(--someCOMPLEXvalue, #00f);
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles(':root')}
  ↓ ↓ ↓
class="_4qI4JK _3zBmgU"

className={styles('body')}
  ↓ ↓ ↓
class="stDQH"

className={styles('bodyWithFallback')}
  ↓ ↓ ↓
class="S1vUl"

`;
